--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <div class="container">
       <img src="./logo.svg" alt="Logo" class="logo">
       <h1>Coming Soon<span id="dots"></span></h1>
+      
     </div>
 
     <script>
+      import { Analytics } from "@vercel/analytics/react"
       let dots = document.getElementById("dots");
       let dotCount = 0;
 
