--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <body>
     
     <div class="container">
+      <a href="https://x.com/DiceDegen_">
       <img src="./logo.svg" alt="Logo" class="logo">
+      </a>
       <h1>Coming Soon<span id="dots"></span></h1>
-      
     </div>
 
     <script>
