--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <img src="./logo.svg" alt="Logo" class="logo">
       </a>
       <h1>Coming Soon<span id="dots"></span></h1>
+
+      <a href="https://discord.gg/xDTGav26zy" target="_blank" class="no-underline">
+        <h2>Click on me to learn more!</h2>
+      </a>
+
     </div>
 
     <script>
